[package]
name = "fdb-stacktester"
version = "0.1.0"
edition = "2018"

[features]
default = []
fdb-6_3 = ["fdb/fdb-6_3"]

[dependencies]
bytes = "1"
dashmap = "4"
fdb = { version = "0.1.0", path = "../fdb", default-features = false }
fdb-sys = { version = "0.1.0", path = "../fdb-sys", default-features = false }
itertools = "0.10.0"
num-bigint = "0.4"
tokio = { version = "1", features = ["full"] }
uuid = { version = "0.8", features = ["v4"] }
