[package]
name = "fdb"
version = "0.1.0"
edition = "2018"
authors = [
    "Benjamin Fry <benjaminfry@me.com>",
    "Vincent Rouillé <vincent@clikengo.com>",
]

description = """
High level client bindings for FoundationDB using Tokio
"""

[features]
default = []

fdb-6_3 = ["fdb-gen/fdb-6_3", "fdb-sys/fdb-6_3"]

[dependencies]
bytes = "1"
fdb-sys = { version = "0.1.0", path = "../fdb-sys", default-features = false }
parking_lot = "0.11.1"

[dev-dependencies]
impls = "1"
libc = "0.2.101"

[build-dependencies]
fdb-gen = { version = "0.1.0", path = "../fdb-gen", default-features = false }
